Changes study name

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>RAPID Study</title>
+    <title>Factorial Design Breathing Study</title>
 
   </head>
   <body>
