#31 Changes "Factorial Design Breathing Study" to "Breathing Study"

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Factorial Design Breathing Study</title>
+    <title>Breathing Study</title>
 
   </head>
   <body>
